@@ -1,30 +1,3 @@
-- all toilet roll loaders need to set "page-height"
-
-  magick, pdf, gif and tiff need to use the same page/n interface
-
-  magick6
-
-	deprecated all_frames, added n, added tests, added page-height
-
-  magick7
-
-	same
-
-  gifload has page, but no n
-
-  	add an n param
-
-	add page-height
-
-  pdfload has page, n, allows n == -1, sets page-height
-
-
-
-
-
-
-
-
 - not sure about utf8 error messages on win
 
 - strange: 
